@@ -41,6 +41,8 @@ BUG FIXES AND IMPROVEMENTS
       of empty ranges.
     * Fix corner cases of breakTranscriptsOnGenes() and combineTranscripts()
       failing when no break or join errors are detected.
+    * Fix makeConsensusAnnotations not correctly validating presence of gene_id
+      column.
     * One can now control makeConsensusAnnotations() multi-core parallelism.
       Remove the hard coded 10 CPU cores.
     * Move all packages from Depends to Imports to fix Travis-CI bootstrap
